--- a/style.css
+++ b/style.css
@@ -71,8 +71,23 @@ form .drop-list {
     font-size: 16px;
     margin: 0 -5px 0 5px;
 }
+
+.select-box select::-webkit-scrollbar{
+    width: 8px;
+}
+
+.select-box select::-webkit-scrollbar-track {
+    background: #fff;
+}
+
+.select-box select::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 8px;
+    border-right: 2px solid #fff;
+}
+
 .select-box img {
-    max-width: 40px;
+    width: 30px;
     max-height: 100px;
 }
 
